# biotic-interaction-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  config.toml  process_articles.py  pyproject.toml  requirements.txt
api/: app.py
deploy/: inventory.yml  playbook.yml
deploy/group_vars/: all.yml
deploy/templates/: biotic.service.j2  config.toml.j2
filter/: __init__.py
src/biotic_pipeline/: __init__.py  api_server.py  classifier.py  config.py  filter.py  multitask_model.py
